Stop overlapping text on mobile

--- a/src/main/client/javascript/components/wallet/WalletAccountListItem.less
+++ b/src/main/client/javascript/components/wallet/WalletAccountListItem.less
@@ -9,6 +9,9 @@
             height: 40px;
             margin-right: 1rem;
         }
+        div {
+            min-width: 0;
+        }
     }
 
     a {
