--- a/src/main/client/less/styles/main.less
+++ b/src/main/client/less/styles/main.less
@@ -190,6 +190,11 @@ button.btn-margin {
         width: auto; /*90%;*/
         max-width: 100%;
     }
+
+    .default-layout {
+        padding: 0 16px;
+        background: @hut-orange;
+    }
 }
 
 // Small devices (landscape phones, less than 768px)
